updated latex file

--- a/Zusammenfassung SE/input/software.tex
+++ b/Zusammenfassung SE/input/software.tex
@@ -241,9 +241,9 @@
 		\item strikte Phaseneinteilung ist unrealistisch (Rückgriffe sind notwendig)
 		\item Wartung mit ca. 60\% des Gesamtaufwandes ist eine Phase
 	\end{itemize}
-	\subsubsection{Andere Darstellung der Aufwandsverteilung}
 	\begin{figure}[h]
 		\centering
+		\caption{Andere Darstellung der Aufwandsverteilung}
 		\includegraphics[width=0.65\textwidth]{taskDistribution}
 	\end{figure}
 	\subsubsection{Typische Probleme in der Wartungsphase}
@@ -278,14 +278,14 @@
 	Beim Reverse Engineering ist das vorhandene Software-System der Ausgangspunkt der Analyse. Ausgehend von existierender Implementierung wird meist „nur“ das Design rekonstruiert und dokumentiert. Es wird (noch) nicht das betrachtete System modifiziert.
 	\subsubsection{Reengineering}
 	Reengineering befaßt sich mit der Sanierung eines vorhandenen Software-Systems bzw. seiner Neuimplementierung. Dabei werden die Ergebnisse des Reverse Engineerings als Ausgangspunkt genommen
-	\subsubsection{Round Trip Engineering}
 	\begin{figure}[h]
 		\centering
+		\caption{Round Trip Engineering}
 		\includegraphics[width=0.85\textwidth]{roundTripEngineering}
 	\end{figure}
-	\subsubsection{Einfaches Software-Lebenszyklus-Prozessmodell für die Wartung}
 	\begin{figure}[h]
 		\centering
+		\caption{Einfaches Software-Lebenszyklus-Prozessmodell für die Wartung}
 		\includegraphics[width=0.85\textwidth]{softwareCycle-1}
 	\end{figure}
 	\subsubsection{Das V-Modell}
@@ -301,5 +301,6 @@
 	\end{itemize}
 	\begin{figure}[h]
 		\centering
+		\caption{Das V-Modell}
 		\includegraphics[width=0.85\textwidth]{v-model}
 	\end{figure}
