--- a/Zusammenfassung SE/main.tex
+++ b/Zusammenfassung SE/main.tex
@@ -11,6 +11,7 @@
 % 	\tableofcontents %Inhaltsverzeichnis erstellen
 
 	\input{input/software}
+	\input{input/konfigurationsmanagement}
 %	\input{input/fdtdintro}
 %	\input{input/fdtdstability}
 %	\input{input/fdtdmaxwell}
