--- a/Zusammenfassung SE/input/software.tex
+++ b/Zusammenfassung SE/input/software.tex
@@ -62,7 +62,7 @@
 		\item \textbf{Integrierte, frühzeitige, analytische Qualitätssicherung}: Systematische Prüfung aller erzeugter Dokumente (Aufdeckung von Qualitätsproblemen)
 		\item \textbf{Unabhängige Qualitätssicherung}: Entwicklungsprodukte werden durch eigenständige Qualitätssicherungsabteilung überprüft und abgenommen (verhindert u.a. Verzicht auf Testen zugunsten Einhaltung des Entwicklungsplans)
 	\end{itemize}
-	\subsubsection{Konstruktives Qualitätssicherung zur Fehlervermeidung}: 
+	\subsubsection{Konstruktives Qualitätssicherung zur Fehlervermeidung:} 
 	\begin{itemize}
 		\item Technische Maßnahmen
 		\begin{itemize}
