--- a/Zusammenfassung SE/main.tex
+++ b/Zusammenfassung SE/main.tex
@@ -12,6 +12,9 @@
 
 	\input{input/software}
 	\input{input/konfigurationsmanagement}
+	\input{input/statische-programmanalyse-metriken}
+	\input{input/dynamische-programmanalysen-und-testen}
+	\input{input/management-der-software-entwicklung}
 %	\input{input/fdtdintro}
 %	\input{input/fdtdstability}
 %	\input{input/fdtdmaxwell}
